@@ -92,12 +92,17 @@
 
 <!--      <p>There is currently no separate development release.</p>-->
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.90.tar.gz"
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.91.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.23.90</a></div>
+      Deskbar-Applet 2.23.91</a></div>
       
     <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.90.tar.gz">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Deskbar-Applet 2.23.90</a></div>
+    
       <div class="download">
       <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.6.tar.gz">
       <img src="./images/package-x-generic.png" alt="source package" />
