@@ -86,6 +86,27 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>September 1, 2008</h3>
+	      <b>Unstable</b> version 2.23.91 released.<br />
+	        This release mainly features bug fixes.
+			In addition, history items can be deleted
+			in tray mode pressing delete key now.
+			<br /><br />
+			Changes since 2.23.90:
+			<ul>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=548867">#548867</a>, Cannot iterate over gtk.ListStore</li>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=548422">#548422</a>, Invalid tooltip formatting in twitter module</li>
+				<li>Fixed #542997, Mozilla modules ask for Firefox between 2.0.0.0 and 3.0.0.0, so FF 3.0.1 doesn't work!</li>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=549203">#549203</a>, Superfluous strings for localisation</li>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=549206">#549206</a>, Please add comments along with strings for localisation</li>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=549375">#549375</a>, deskbar-applet 2.23.90 history dropdown doesn't dismiss after selection</li>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=549432">#549432</a>, Fix g_strjoin() call in evolution module</li>
+				<li>Set the 'source' parameter on updates to 'deskbar'. This should put a small 'from deskbar' links after Twitter posts.</li>
+				<li>Pressing the delete key will remove the selected item from history in tray mode, too.</li>
+				<li>Fix a bug in the way the new core.Web module handled updating of account info. Before this fix we leaked accounts each time editing of credentials took place, and we failed to look up the right one if there where multiple.</li>
+			</ul>
+			<a href="download.html">Download it</a>
+	    
 	    <h3>August 18, 2008</h3>
 		  <b>Unstable</b> version 2.23.90 released.<br />
 		    This release comes with new twitter and identi.ca
